--- a/_configCreator.ipynb
+++ b/_configCreator.ipynb
@@ -17,7 +17,9 @@
    "source": [
     "#C:\\Users\\CW3\\BMS Group\\BMS Re - Documents\\Actuarial\\Models\\New Model Development\\Blank Analysis Template\\Code\\ReinsuranceStrategy_ConfigSpecsv2.xlsm\n",
     "#C:\\Users\\CW3\\BMS Group\\BMS Re - Documents\\Actuarial\\Individual Actuary Folders\\Clare Whitlam\\Work With Miles\\Code\\ReinsuranceStrategy_ConfigSpecsv2.xlsm\n",
-    "#C:\\Users\\CW3\\BMS Group\\BMS Re - Documents\\Actuarial\\Individual Actuary Folders\\Clare Whitlam\\Strategy - working\\ReinsuranceStrategy_ConfigSpecsv2.xlsm"
+    "#C:\\Users\\CW3\\BMS Group\\BMS Re - Documents\\Actuarial\\Individual Actuary Folders\\Clare Whitlam\\Strategy - working\\ReinsuranceStrategy_ConfigSpecsv2.xlsm\n",
+    "\n",
+    "#C:\\Actuarial Tools\\Python-Based Models\\Experience-Rating\\ExperienceRating_ConfigSpecs.xlsm"
    ]
   },
   {
@@ -39,7 +41,6 @@
       "dict_specInfoTable\n",
       "dict_excelResultSheets\n",
       "dict_excelResultTables\n",
-      "dict_excelResultFunctions\n",
       "dict_userPaths\n",
       "dict_specDataFormats\n",
       "dict_panelMapWidgetTypes\n",
@@ -54,8 +55,7 @@
       "dict_panelDataforms\n",
       "dict_panelDataformCards\n",
       "dict_panelCustomDataform\n",
-      "dict_panelDataTypes\n",
-      "dict_complement\n"
+      "dict_panelDataTypes\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "66f105b9",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
     "\n",
     "import configparser\n",
     "config = configparser.ConfigParser()\n",
-    "config.read(\"C:/Users/CW3/BMS Group/BMS Re - Documents/Actuarial/Models/New Model Development/Reinsurance Strategy Analysis/Config.ini\")\n",
+    "config.read(\"C:\\Actuarial Tools\\Python-Based Models\\Experience-Rating\\ExperienceRating_ConfigSpecs.xlsm\")\n",
     "print(config)\n",
     "dict_dataTypes={}\n",
     "\n",
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   },
   "toc-showcode": false,
   "toc-showmarkdowntxt": true,
